# embedding-rag-classifier

./: .env.sample  .pre-commit-config.yaml  .tfyignore  Dockerfile  Makefile  main.py  pyproject.toml  qdrant.yaml  requirements.txt
data/: dataset.csv  labels.txt
src/: config.py  contrastive_learning.py  logger.py  plot_embedding_map.py
src/services/: embedding_inference.py  infinity.py  qdrant.py  qdrant_indexing.py  search_rag.py
